<resources>
    <string name="app_name">Teste Catho App</string>
    <string name="greetings_user">Olá, &lt;b>%1$s&lt;/b></string>
    <string name="suggestions_title"><b>Sugestões de vagas para você</b></string>
    <string name="tips_title"><b>#DicaDosRecrutadores</b></string>
    <string name="send_cv">ENVIAR CURRÍCULO</string>
    <string name="cv_sent">CV Enviado</string>
    <string name="salary_title">Salário: </string>
    <string name="company_title">Empresa: </string>
    <string name="date_title">Data: </string>
    <string name="positions_title">Vagas: </string>
    <string name="locations_title">Localidade: </string>
    <string name="no_more_tips">Não há mais dicas disponíveis no momento. Continue acompanhando!</string>
</resources>
