<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_progress_bar"
        android:layout_centerInParent="true"
        android:visibility="visible"
        >

    </ProgressBar>

    <!-- Textos hardcoded apenas para mockup e teste -->
    <!-- Textos vão ser substituídos pela API após o loading -->
   <LinearLayout
       android:id="@+id/activity_main_linear_layout_wrapper"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
       android:orientation="vertical"
       >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/activity_main_greetings_rl"
           android:layout_weight="0"
           >
           <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/activity_main_profile_picture"
               android:layout_width="96dp"
               android:layout_height="96dp"
               android:src="@drawable/ic_launcher_background"
               app:civ_border_width="4dp"
               app:civ_border_color="@color/borderColor"
               android:padding="16dp"
               />

           <TextView
               android:id="@+id/activity_main_greetings_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/greetings_user"
               android:padding="32dp"
               android:textSize="@dimen/title_text_size"
               android:textColor="@color/textColor"
               android:layout_centerHorizontal="true"
               />
       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/activity_main_suggestions_rl"
           android:layout_weight="4"
           >

           <TextView
               android:id="@+id/activity_main_suggestions_title_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/suggestions_title"
               android:paddingTop="16dp"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:textSize="@dimen/title_text_size"
               android:textColor="@color/textColor"
               />
           
           <com.example.testecathoapp.containers.PagerContainer
               android:id="@+id/activity_main_pager_container"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/activity_main_suggestions_title_tv"
               >

               <androidx.viewpager.widget.ViewPager
                   android:id="@+id/activity_main_view_pager"
                   android:layout_width="@dimen/jobs_width"
                   android:layout_height="@dimen/cards_height"
                   android:layout_below="@id/activity_main_suggestions_title_tv"
                   android:layout_margin="16dp"
                   />
           </com.example.testecathoapp.containers.PagerContainer>

           <LinearLayout
               android:id="@+id/activity_main_layout_dots"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:orientation="horizontal"
               android:layout_below="@id/activity_main_pager_container"
               >
           </LinearLayout>

       </RelativeLayout>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="@dimen/cards_height"
           android:id="@+id/activity_main_tips_rl"
           android:layout_weight="4"
           >

           <TextView
               android:id="@+id/activity_main_tips_title_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tips_title"
               android:paddingTop="16dp"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:textSize="@dimen/title_text_size"
               android:textColor="@color/textColor"
               android:layout_above="@id/activity_main_tip_card_view"
               />

           <View
               android:layout_width="40dp"
               android:layout_height="24dp"
               android:background="@drawable/expand_more"
               android:layout_alignParentEnd="true"
               android:layout_above="@id/activity_main_tip_card_view"
               android:layout_marginEnd="16dp"
               />

           <androidx.cardview.widget.CardView
               android:id="@+id/activity_main_tip_card_view"
               android:layout_width="match_parent"
               android:layout_height="@dimen/cards_height"
               android:layout_margin="16dp"
               app:cardCornerRadius="16dp"
               android:layout_alignParentBottom="true"
               >

               <FrameLayout
                   android:id="@+id/activity_main_tip_fl"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />

           </androidx.cardview.widget.CardView>

       </RelativeLayout>
   </LinearLayout>

</RelativeLayout>